--- a/midichlorians.ipynb
+++ b/midichlorians.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -10,6 +10,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "import re\n",
     "import os\n",
     "import datetime\n",
     "\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -43,12 +44,13 @@
     "            raise RuntimeError('Calling \"start()\" before process pipe was closed.')\n",
     "\n",
     "        cmd = (self.ffmpeg,\n",
-    "                     '-y',\n",
-    "                     '-r', str(framerate),\n",
-    "                     '-f','image2pipe',\n",
-    "                     '-vcodec', vcodec,\n",
-    "                     '-i', 'pipe:', \n",
-    "                     '-vcodec', 'libxvid', outfile)\n",
+    "                '-y',\n",
+    "                '-r', str(framerate),\n",
+    "                '-f','image2pipe',\n",
+    "                '-vcodec', vcodec,\n",
+    "                '-i', 'pipe:', \n",
+    "                '-vcodec', 'libxvid',\n",
+    "                re.sub(r'[^\\d\\w\\.]', '_', outfile))\n",
     "        \n",
     "        self.proc = subprocess.Popen(cmd, stdin=subprocess.PIPE)\n",
     "        \n",
@@ -81,7 +83,10 @@
     "        if k in PIL.ExifTags.TAGS\n",
     "    }\n",
     "    timestamp = datetime.datetime.strptime(exif.get('DateTime'), TS_FORMAT)\n",
-    "    ts_map[fname] = (timestamp, exif.get('Model'), '%dx%d' % (exif.get('ExifImageHeight'), exif.get('ExifImageWidth')))"
+    "    ts_map[fname] = (\n",
+    "        timestamp,\n",
+    "        exif.get('Model').replace('\\x00', ''),\n",
+    "        '%dx%d' % (exif.get('ExifImageHeight'), exif.get('ExifImageWidth')))"
    ]
   },
   {
@@ -92,101 +97,12 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>camera</th>\n",
-       "      <th>resolution</th>\n",
-       "      <th>timediff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>G0010205.JPG</td>\n",
-       "      <td>2016-07-26 13:06:13</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
-       "      <td>2448x3264</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2866</th>\n",
-       "      <td>G0020206.JPG</td>\n",
-       "      <td>2016-07-26 13:07:35</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
-       "      <td>2448x3264</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2097</th>\n",
-       "      <td>G0030207.JPG</td>\n",
-       "      <td>2016-07-26 13:16:26</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
-       "      <td>2448x3264</td>\n",
-       "      <td>531.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2633</th>\n",
-       "      <td>GOPR0209.JPG</td>\n",
-       "      <td>2016-07-26 13:49:54</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
-       "      <td>2040x2720</td>\n",
-       "      <td>2008.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3304</th>\n",
-       "      <td>GOPR0210.JPG</td>\n",
-       "      <td>2016-07-26 13:50:23</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
-       "      <td>2040x2720</td>\n",
-       "      <td>29.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          filename           timestamp                   camera resolution  \\\n",
-       "137   G0010205.JPG 2016-07-26 13:06:13  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2448x3264   \n",
-       "2866  G0020206.JPG 2016-07-26 13:07:35  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2448x3264   \n",
-       "2097  G0030207.JPG 2016-07-26 13:16:26  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2448x3264   \n",
-       "2633  GOPR0209.JPG 2016-07-26 13:49:54  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2040x2720   \n",
-       "3304  GOPR0210.JPG 2016-07-26 13:50:23  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2040x2720   \n",
-       "\n",
-       "      timediff  \n",
-       "137        NaN  \n",
-       "2866      82.0  \n",
-       "2097     531.0  \n",
-       "2633    2008.0  \n",
-       "3304      29.0  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Compute the difference between frames\n",
-    "df = pd.DataFrame.from_dict(ts_map, orient='index').reset_index()\\\n",
-    "    .rename(columns={'index': 'filename', 0: 'timestamp', 1: 'camera', 2: 'resolution'}).sort_values('timestamp')\n",
-    "df['timediff'] = df['timestamp'].diff().astype('timedelta64[s]')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cameras: ['HERO4 Session']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -199,108 +115,79 @@
        "      <th>timestamp</th>\n",
        "      <th>camera</th>\n",
        "      <th>resolution</th>\n",
-       "      <th>timediff</th>\n",
-       "      <th>framegroup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>137</th>\n",
+       "      <th>713</th>\n",
        "      <td>G0010205.JPG</td>\n",
        "      <td>2016-07-26 13:06:13</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
+       "      <td>HERO4 Session</td>\n",
        "      <td>2448x3264</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2866</th>\n",
+       "      <th>2234</th>\n",
        "      <td>G0020206.JPG</td>\n",
        "      <td>2016-07-26 13:07:35</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
+       "      <td>HERO4 Session</td>\n",
        "      <td>2448x3264</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2097</th>\n",
+       "      <th>425</th>\n",
        "      <td>G0030207.JPG</td>\n",
        "      <td>2016-07-26 13:16:26</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
+       "      <td>HERO4 Session</td>\n",
        "      <td>2448x3264</td>\n",
-       "      <td>531.0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2633</th>\n",
+       "      <th>1419</th>\n",
        "      <td>GOPR0209.JPG</td>\n",
        "      <td>2016-07-26 13:49:54</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
+       "      <td>HERO4 Session</td>\n",
        "      <td>2040x2720</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3304</th>\n",
+       "      <th>2412</th>\n",
        "      <td>GOPR0210.JPG</td>\n",
        "      <td>2016-07-26 13:50:23</td>\n",
-       "      <td>HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</td>\n",
+       "      <td>HERO4 Session</td>\n",
        "      <td>2040x2720</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          filename           timestamp                   camera resolution  \\\n",
-       "137   G0010205.JPG 2016-07-26 13:06:13  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2448x3264   \n",
-       "2866  G0020206.JPG 2016-07-26 13:07:35  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2448x3264   \n",
-       "2097  G0030207.JPG 2016-07-26 13:16:26  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2448x3264   \n",
-       "2633  GOPR0209.JPG 2016-07-26 13:49:54  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2040x2720   \n",
-       "3304  GOPR0210.JPG 2016-07-26 13:50:23  HERO4 Session\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000  2040x2720   \n",
-       "\n",
-       "      timediff  framegroup  \n",
-       "137        NaN           0  \n",
-       "2866      82.0           0  \n",
-       "2097     531.0           1  \n",
-       "2633    2008.0           2  \n",
-       "3304      29.0           2  "
+       "          filename           timestamp         camera resolution\n",
+       "713   G0010205.JPG 2016-07-26 13:06:13  HERO4 Session  2448x3264\n",
+       "2234  G0020206.JPG 2016-07-26 13:07:35  HERO4 Session  2448x3264\n",
+       "425   G0030207.JPG 2016-07-26 13:16:26  HERO4 Session  2448x3264\n",
+       "1419  GOPR0209.JPG 2016-07-26 13:49:54  HERO4 Session  2040x2720\n",
+       "2412  GOPR0210.JPG 2016-07-26 13:50:23  HERO4 Session  2040x2720"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign values to contiguous frames\n",
-    "tmp = df['timediff'] > 120\n",
-    "df['framegroup'] = tmp.astype(int).cumsum()\n",
-    "df.head()"
+    "# Separate data based on camera type\n",
+    "df = pd.DataFrame.from_dict(ts_map, orient='index').reset_index()\\\n",
+    "    .rename(columns={'index': 'filename', 0: 'timestamp', 1: 'camera', 2: 'resolution'}).sort_values('timestamp')\n",
+    "cameras = df['camera'].unique().tolist()\n",
+    "\n",
+    "df_ = {}\n",
+    "for camera in cameras:\n",
+    "    df_[camera] = df[df['camera'] == camera]\n",
+    "    \n",
+    "print('Cameras:', cameras)\n",
+    "df_[cameras[0]].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Filter out frames with bogus resolution\n",
-    "df['filter'] = 1\n",
-    "df['area'] = df['resolution'].apply(lambda x: int(x.split('x')[0]) * int(x.split('x')[1]))\n",
-    "for group in df['framegroup'].unique():\n",
-    "    ix = df['framegroup'] == group\n",
-    "    median = df.loc[ix, 'area'].median()\n",
-    "    df.loc[ix, 'filter'] = (df.loc[ix, 'area'] == median).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -310,58 +197,60 @@
      "output_type": "stream",
      "text": [
       "Time span: 2016-07-26 16:54:46 - 2016-07-27 11:15:55 (0 days 18:21:09)\n",
-      "Framerate: 14.984908 (~32.032229)\n",
-      "\n",
-      "Time span: 2016-07-27 16:26:13 - 2016-07-28 10:45:43 (0 days 18:19:30)\n",
-      "Framerate: 7.997458 (~60.019074)\n",
-      "\n"
+      "Framerate: 14.984908 (~32.032229)\n"
      ]
-    }
-   ],
-   "source": [
-    "for group in df['framegroup'].unique():\n",
-    "    ix = (df['framegroup'] == group) & df['filter']\n",
-    "    frames = df.loc[ix]\n",
-    "    if len(frames) < 10: continue\n",
-    "        \n",
-    "    mintime = frames['timestamp'].min()\n",
-    "    maxtime = frames['timestamp'].max()\n",
-    "    \n",
-    "    avediff = frames['timediff'].mean()\n",
-    "    framerate = 8.0 * 60.0 / avediff\n",
-    "\n",
-    "    print('Time span: %s - %s (%s)' % (mintime, maxtime, (maxtime - mintime)))\n",
-    "    print('Framerate: %f (~%f)' % (framerate, avediff))\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 2203/2203 [16:15<00:00,  2.28it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1101/1101 [07:50<00:00,  2.29it/s]\n"
+      " 26%|████████████████████▎                                                          | 565/2203 [03:30<10:58,  2.49it/s]"
      ]
     }
    ],
    "source": [
     "enc = VideoEncoder()\n",
-    "for group in df['framegroup'].unique():\n",
-    "    frames = df[df['filter'] & (df['framegroup'] == group)]\n",
-    "    if len(frames) < 10: continue\n",
-    "    framerate = 8.0 * 60.0 / frames['timediff'].mean()\n",
-    "    enc.start('seastars_%02d.mp4' % group, framerate=framerate)\n",
-    "    for fname in tqdm.tqdm(frames['filename'][:]):\n",
-    "        img = open(os.path.join('session', fname), 'rb')\n",
-    "        enc.encode([img.read()])\n",
-    "    enc.close()"
+    "for camera in cameras:\n",
+    "    df = df_[camera]\n",
+    "    \n",
+    "    # Compute the difference between frames\n",
+    "    df['timediff'] = df['timestamp'].diff().astype('timedelta64[s]')\n",
+    "    \n",
+    "    # Assign values to contiguous frames\n",
+    "    tmp = df['timediff'] > 120\n",
+    "    df['framegroup'] = tmp.astype(int).cumsum()\n",
+    "    \n",
+    "    # Filter out frames with bogus resolution\n",
+    "    df['filter'] = 1\n",
+    "    df['area'] = df['resolution'].apply(lambda x: int(x.split('x')[0]) * int(x.split('x')[1]))\n",
+    "    for group in df['framegroup'].unique():\n",
+    "        ix = df['framegroup'] == group\n",
+    "        median = df.loc[ix, 'area'].median()\n",
+    "        df.loc[ix, 'filter'] = (df.loc[ix, 'area'] == median).astype(int)\n",
+    "        \n",
+    "        ix = (df['framegroup'] == group) & df['filter']\n",
+    "        frames = df.loc[ix]\n",
+    "        if len(frames) < 10: continue\n",
+    "\n",
+    "        mintime = frames['timestamp'].min()\n",
+    "        maxtime = frames['timestamp'].max()\n",
+    "\n",
+    "        avediff = frames['timediff'].mean()\n",
+    "        framerate = 8.0 * 60.0 / avediff\n",
+    "\n",
+    "        print('Time span: %s - %s (%s)' % (mintime, maxtime, (maxtime - mintime)))\n",
+    "        print('Framerate: %f (~%f)' % (framerate, avediff))\n",
+    "        \n",
+    "        frames = df[df['filter'] & (df['framegroup'] == group)]\n",
+    "        if len(frames) < 10: continue\n",
+    "        framerate = 8.0 * 60.0 / frames['timediff'].mean()\n",
+    "        enc.start('%s_%s_seastars.mp4' % (camera, mintime), framerate=framerate)\n",
+    "        for fname in tqdm.tqdm(frames['filename'][:]):\n",
+    "            img = open(os.path.join('session', fname), 'rb')\n",
+    "            enc.encode([img.read()])\n",
+    "        enc.close()\n",
+    "\n",
+    "df[cameras[0]].head()"
    ]
   }
  ],
