--- a/midichlorians.ipynb
+++ b/midichlorians.ipynb
@@ -75,8 +75,8 @@
     "# Build a map of filename -> timestamp, camera, resolution\n",
     "TS_FORMAT = '%Y:%m:%d %H:%M:%S'\n",
     "ts_map = {}\n",
-    "for fname in [f for f in os.listdir('session') if os.path.isfile(os.path.join('session', f))]:\n",
-    "    img = PIL.Image.open(os.path.join('session', fname))\n",
+    "for fname in [f for f in os.listdir('photos') if os.path.isfile(os.path.join('photos', f))]:\n",
+    "    img = PIL.Image.open(os.path.join('photos', fname))\n",
     "    exif = {\n",
     "        PIL.ExifTags.TAGS[k]: v\n",
     "        for k, v in img._getexif().items()\n",
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
